--- a/src/components/home/Header.module.css
+++ b/src/components/home/Header.module.css
@@ -1,4 +1,5 @@
 header {
+  padding-top: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -31,4 +32,25 @@ header img {
 .text button:active {
   --themecolor: rgb(116, 62, 51);
   color: rgb(245, 235, 220);
+}
+@media screen and (max-width: 450px) {
+  header {
+    padding-top: 150px;
+    flex-direction: column;
+    justify-content: left;
+    height: 100%;
+  }
+  header img {
+    padding-top: 30px;
+    width: 100%;
+  }
+  .text {
+    padding-left: 10%;
+    font-size: 20px;
+    width: 90%;
+  }
+  .text button {
+    margin-top: 10px;
+    padding: 0.2rem 1rem;
+  }
 }
