--- a/src/components/products/ProductsGrid.module.css
+++ b/src/components/products/ProductsGrid.module.css
@@ -1,5 +1,9 @@
 .gridContainer {
   padding: 50px 250px;
   display: block;
-  grid-template-columns: auto auto auto;
+}
+@media screen and (max-width: 450px) {
+  .gridContainer {
+    padding: 0px;
+  }
 }
